dockerizacion con wallet incluida para levantar microservicio spring + oracle ATP db

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=demomicroservices
 server.port=8080
 
 # Configuración de la base de datos (requerido si usas JPA)
-spring.datasource.url=jdbc:oracle:thin:@yf7tjc6pmfwbdzf6_high?TNS_ADMIN=C:/Users/roron/OneDrive/Escritorio/Ejemplo_microservicios_Java/Wallet_YF7TJC6PMFWBDZF6
+spring.datasource.url=jdbc:oracle:thin:@yf7tjc6pmfwbdzf6_high?TNS_ADMIN=/app/Wallet_YF7TJC6PMFWBDZF6
 spring.datasource.username=EJEMPLO_SPRING
 spring.datasource.password=myContra.pract_1
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
