--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,18 @@
 spring.application.name=demomicroservices
 
-# Puerto del servidor (opcional, por defecto es 8080)
 server.port=8080
 
-# Configuración de la base de datos (requerido si usas JPA)
-spring.datasource.url=jdbc:oracle:thin:@yf7tjc6pmfwbdzf6_high?TNS_ADMIN=/app/Wallet_YF7TJC6PMFWBDZF6
-spring.datasource.username=EJEMPLO_SPRING
-spring.datasource.password=myContra.pract_1
-spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+# Configuración de la base de datos PostgreSQL
+spring.datasource.url=jdbc:postgresql://db:5432/demomicroservices
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-# JPA (opcional pero recomendado)
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
 
 #Revisar logs 
 # logging.level.org.hibernate.SQL=DEBUG
